# celltrackscolab-viewer

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/celltrackscolabviewer/: __init__.py  _widget.py  napari.yaml
src/celltrackscolabviewer/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
