[metadata]
name = celltrackscolabviewer
version = 0.1.0
description = A Napari plugin for visualizing cell tracks
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/CellMigrationLab/celltrackscolabviewer
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Framework :: napari

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7  
include_package_data = True
setup_requires = setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
napari.plugin =
    celltrackscolabviewer = celltrackscolabviewer

